--- a/src/app/common/components/network/oeb-network-detail.component.html
+++ b/src/app/common/components/network/oeb-network-detail.component.html
@@ -1,5 +1,5 @@
 <div class="tw-flex tw-justify-between tw-gap-6">
-	<div class="tw-flex oeb-section-sm md:tw-max-w-[70%]">
+	<div class="tw-flex oeb-section-sm md:tw-max-w-[70%] tw-items-center">
 		<div class="tw-relative">
 			<img
 				[loaded-src]="network?.image"
@@ -35,7 +35,7 @@
 			</div>
 		}
 		<section
-			class="tw-bg-oebgrey tw-mt-4 tw-rounded-[10px] tw-p-2 tw-flex tw-flex-col tw-justify-center tw-items-center"
+			class="tw-bg-oebgrey tw-mt-4 tw-rounded-[10px] tw-p-4 tw-flex tw-flex-col tw-justify-center tw-items-center"
 		>
 			<div>
 				<h2 class="tw-w-full tw-text-oebblack tw-text-lg tw-font-bold">
@@ -43,7 +43,10 @@
 				</h2>
 				<ul class="tw-w-full tw-list-none tw-mt-2">
 					@for (issuer of issuers; track issuer) {
-						<li class="tw-flex tw-gap-2 tw-items-center" [routerLink]="['/public/issuers', issuer.slug]">
+						<li
+							class="tw-flex tw-gap-2 tw-items-center tw-mt-2"
+							[routerLink]="['/public/issuers', issuer.slug]"
+						>
 							<img class="tw-w-[33px]" [src]="issuer.image" />
 							<span class="tw-text-oebblack">
 								{{ issuer.name }}
