--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -3,7 +3,7 @@
 		<div class="oeb-breadcrumbs">
 			<bg-breadcrumbs [linkentries]="crumbs"> </bg-breadcrumbs>
 		</div>
-		<h1 hlmH1 class="tw-text-purple tw-font-black">{{ 'Network.welcomeDashboard' | translate }}</h1>
+		<h1 hlmH1 class="tw-text-purple tw-font-black tw-mt-20">{{ 'Network.welcomeDashboard' | translate }}</h1>
 		<ng-template [bgAwaitPromises]="[networkLoaded]">
 			<section class="tw-flex tw-gap-4 tw-mt-8 tw-items-center">
 				<div class="tw-bg-white tw-w-[100px] tw-h-[100px]">
