feat: wip detail components

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -279,14 +279,14 @@
 	</ng-template>
 
 	<ng-template #issuerBadgesTemplate>
-		<div class="tw-mt-12 tw-bg-[#F8F6FC]">
+		<!-- <div class="tw-mt-12 tw-bg-[#F8F6FC]">
 			<badges-datatable
 				[badges]="badgeResults"
 				(directBadgeAward)="routeToBadgeAward($event, issuer)"
 				(qrCodeAward)="routeToQRCodeAward($event, issuer)"
 				(redirectToBadgeDetail)="routeToBadgeDetail($event.badge, issuer, $event.focusRequests)"
 			></badges-datatable>
-		</div>
+		</div> -->
 	</ng-template>
 
 	<ng-template #networkBadgesTemplate>
