--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -216,6 +216,7 @@
 						<div class="tw-flex tw-flex-col tw-justify-center tw-pl-4 oeb-break-words">
 							<a
 								class="md:tw-text-[30px] md:tw-leading-[36px] tw-text-[20px] tw-leading-[24px] tw-text-purple tw-font-semibold"
+								(click)="openLinkedInHintDialog(issuer.slug)"
 								[routerLink]="['/issuer/issuers/', issuer.slug]"
 								>{{ issuer.name }}</a
 							>
@@ -237,6 +238,7 @@
 							[id]="'create-new-badge-btn-1'"
 							[class.disabled]="!issuer.canCreateBadge"
 							class="tw-whitespace-nowrap"
+							(click)="openLinkedInHintDialog(issuer.slug)"
 							[routerLink]="['/issuer/issuers/', issuer.slug, 'badges', 'select']"
 							[disabled]="!issuer.currentUserStaffMember"
 							[text]="'Issuer.createBadge' | translate"
@@ -250,6 +252,7 @@
 						<div>
 							<oeb-button
 								class="tw-whitespace-nowrap tw-flex-grow"
+								(click)="openLinkedInHintDialog(issuer.slug)"
 								[routerLink]="['/issuer/issuers/', issuer.slug]"
 								[text]="'Issuer.giveBadge' | translate"
 								width="full_width"
@@ -413,4 +416,39 @@
 
 <ng-template #networksTemplate>
 	<network-list [networks]="networks()" />
+</ng-template>
+
+<ng-template #linkedInIdDialogHeader>
+	<h3 hlmH3 class="oeb tw-text-purple tw-uppercase tw-font-bold tw-pb-4">
+		{{ 'Issuer.addLinkedInId' | translate }}
+	</h3>
+</ng-template>
+<ng-template #linkedInIdDialogBody let-slug="slug" let-forwardTo="forwardTo">
+	<p hlmP [size]="'sm'" class="oeb tw-pb-4">
+		{{ 'Issuer.linkedInUseNoteText' | translate }}
+	</p>
+	<p hlmP [size]="'sm'" class="oeb tw-font-semibold">
+		{{ 'Issuer.findLinkedInId' | translate }}
+	</p>
+	<p hlmP [size]="'sm'" class="oeb tw-italic tw-text-purple tw-pb-6">
+		{{ 'Issuer.findLinkedInIdText' | translate }}
+	</p>
+	<div class="tw-flex tw-flex-row tw-pb-6 tw-gap-4">
+		<oeb-button
+			[size]="'sm'"
+			[variant]="'blackborder'"
+			[text]="'General.notNow' | translate"
+			(click)="closeDialog()"
+			[routerLink]="forwardTo"
+		/>
+		<oeb-button
+			[size]="'sm'"
+			[text]="'Issuer.addLinkedInId' | translate"
+			(click)="closeDialog()"
+			[routerLink]="['/issuer/issuers', slug, 'edit']"
+		/>
+	</div>
+	<p hlmP [size]="'sm'" class="oeb tw-italic">
+		{{ 'Issuer.findLinkedInIdNote' | translate }}
+	</p>
 </ng-template>
