--- a/src/app/issuer/components/badgeclass-issue/badgeclass-issue.component.html
+++ b/src/app/issuer/components/badgeclass-issue/badgeclass-issue.component.html
@@ -70,7 +70,7 @@
 							[noTopMargin]="true"
 							#nameField
 						></oeb-input>
-						<p hlmP class="tw-text-purple tw-italic tw-mt-1" _size="sm">
+						<p class="tw-text-purple tw-italic tw-mt-2 tw-text-sm">
 							{{ 'Issuer.infoNamePlainText' | translate }}
 						</p>
 					</div>
@@ -83,13 +83,13 @@
 							[fieldType]="recipientIdentifierFieldType"
 							[noTopMargin]="true"
 						></oeb-input>
-						<p hlmP class="tw-text-purple tw-italic tw-mt-1" _size="sm">
+						<p class="tw-text-purple tw-italic tw-mt-2 tw-text-sm">
 							{{ 'Issuer.emailIsIdentifier' | translate }}
 						</p>
 					</div>
 				</div>
 
-				<span class="tw-text-oebblack tw-my-4 tw-text-right tw-text-lg tw-block">
+				<span class="tw-text-oebblack tw-mt-10 tw-mb-4 tw-text-right tw-text-lg tw-block">
 					{{ 'Issuer.receivesBadgeByEmail' | translate }}</span
 				>
 				<div class="tw-border-purple tw-border-solid tw-border tw-px-4 tw-py-6 tw-rounded-[15px] tw-mb-8">
