fix: tabs, translation

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -172,6 +172,7 @@
 				(onTabChanged)="onNestedTabChange($event)"
 				[tabs]="badgeTemplateTabs"
 				[activeTab]="activeTabBadgeTemplate"
+				countStyle="parentheses"
 			>
 			</oeb-tabs>
 		</div>
