--- a/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
+++ b/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
@@ -28,40 +28,32 @@
 		#issuer_name_field
 	></oeb-input>
 
-	<oeb-input
-		class="tw-mt-8"
-		label="{{ 'Issuer.websiteUrl' | translate }}"
-		[control]="issuerForm.rawControlMap.issuer_url"
-		[urlField]="true"
-		[fieldType]="'url'"
-		errorMessage="{{ 'Issuer.enterURL' | translate }}"
-		#issuer_url_field
-	></oeb-input>
-
-	<oeb-input
-		label="{{ 'Issuer.linkedInId' | translate }}"
-		[sublabelRightTemplate]="linkedInIdSublabelRight"
-		[fieldType]="'number'"
-		sublabel="{{ 'Issuer.linkedInIdHint' | translate }}"
-		[control]="issuerForm.rawControlMap.issuer_linkedin_id"
-	/>
-	<ng-template #linkedInIdSublabelRight>
-		({{ 'Issuer.linkedInIdUse1' | translate }}
-		<a (click)="openLinkedInInfoDialog()" class="tw-text-link tw-underline tw-cursor-pointer">{{
-			'Issuer.linkedInIdUseLink' | translate
-		}}</a>
-		{{ 'Issuer.linkedInIdUse2' | translate }})
-	</ng-template>
-	<ng-template #linkedInIdDialogHeader>
-		<h3 hlmH3 class="oeb tw-text-purple tw-uppercase tw-font-bold tw-pb-4">
-			{{ 'Issuer.linkedInUseNoteHeader' | translate }}
-		</h3>
-	</ng-template>
-	<ng-template #linkedInIdDialogBody>
-		<p hlmP [size]="'sm'" class="oeb">
-			{{ 'Issuer.linkedInUseNoteText' | translate }}
-		</p>
-	</ng-template>
+	@if (!networkForm()) {
+		<oeb-input
+			label="{{ 'Issuer.linkedInId' | translate }}"
+			[sublabelRightTemplate]="linkedInIdSublabelRight"
+			[fieldType]="'number'"
+			sublabel="{{ 'Issuer.linkedInIdHint' | translate }}"
+			[control]="issuerForm.rawControlMap.issuer_linkedin_id"
+		/>
+		<ng-template #linkedInIdSublabelRight>
+			({{ 'Issuer.linkedInIdUse1' | translate }}
+			<a (click)="openLinkedInInfoDialog()" class="tw-text-link tw-underline tw-cursor-pointer">{{
+				'Issuer.linkedInIdUseLink' | translate
+			}}</a>
+			{{ 'Issuer.linkedInIdUse2' | translate }})
+		</ng-template>
+		<ng-template #linkedInIdDialogHeader>
+			<h3 hlmH3 class="oeb tw-text-purple tw-uppercase tw-font-bold tw-pb-4">
+				{{ 'Issuer.linkedInUseNoteHeader' | translate }}
+			</h3>
+		</ng-template>
+		<ng-template #linkedInIdDialogBody>
+			<p hlmP [size]="'sm'" class="oeb">
+				{{ 'Issuer.linkedInUseNoteText' | translate }}
+			</p>
+		</ng-template>
+	}
 
 	@if (!networkForm()) {
 		<oeb-select
