fix: refetch partners for dynamic update

--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -61,6 +61,7 @@
 		[issuers]="partnerIssuers()"
 		(removePartnerRequest)="onRemovePartner($event)"
 		[addInstitutionsTemplate]="addInstitutionsTemplate"
+		[refetchTrigger]="refetchCounter"
 	></network-partners>
 </ng-template>
 
