--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -216,7 +216,7 @@
 						<div class="tw-flex tw-flex-col tw-justify-center tw-pl-4 oeb-break-words">
 							<a
 								class="md:tw-text-[30px] md:tw-leading-[36px] tw-text-[20px] tw-leading-[24px] tw-text-purple tw-font-semibold"
-								(click)="openLinkedInHintDialog(issuer.slug)"
+								(click)="openLinkedInHintDialog(issuer)"
 								[routerLink]="['/issuer/issuers/', issuer.slug]"
 								>{{ issuer.name }}</a
 							>
@@ -238,7 +238,7 @@
 							[id]="'create-new-badge-btn-1'"
 							[class.disabled]="!issuer.canCreateBadge"
 							class="tw-whitespace-nowrap"
-							(click)="openLinkedInHintDialog(issuer.slug)"
+							(click)="openLinkedInHintDialog(issuer)"
 							[routerLink]="['/issuer/issuers/', issuer.slug, 'badges', 'select']"
 							[disabled]="!issuer.currentUserStaffMember"
 							[text]="'Issuer.createBadge' | translate"
@@ -252,7 +252,7 @@
 						<div>
 							<oeb-button
 								class="tw-whitespace-nowrap tw-flex-grow"
-								(click)="openLinkedInHintDialog(issuer.slug)"
+								(click)="openLinkedInHintDialog(issuer)"
 								[routerLink]="['/issuer/issuers/', issuer.slug]"
 								[text]="'Issuer.giveBadge' | translate"
 								width="full_width"
