fix: validate linkedinId

--- a/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
+++ b/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
@@ -41,6 +41,7 @@
 	></oeb-input>
 
 	<oeb-input
+		class="oeb-input-hide-arrows"
 		label="{{ 'Issuer.linkedInId' | translate }}"
 		[sublabelRightTemplate]="linkedInIdSublabelRight"
 		[fieldType]="'number'"
