fix: checkbox alignment

--- a/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
+++ b/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
@@ -142,6 +142,7 @@
 			name="verify-intent"
 			[text]="'Issuer.herebyIConfirm' | translate"
 			[control]="issuerForm.rawControlMap.verify_intended_use"
+			[multiLineText]="true"
 		>
 		</oeb-checkbox>
 	</div>
