--- a/src/app/issuer/components/request-badge/request-badge.component.html
+++ b/src/app/issuer/components/request-badge/request-badge.component.html
@@ -70,6 +70,7 @@
 						name="age-confirmation"
 						type="checkbox"
 						[text]="'RequestBadge.ageConfirmation' | translate"
+						[multiLineText]="true"
 						[control]="requestForm.rawControlMap.ageConfirmation"
 					>
 					</oeb-checkbox>
