--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -421,11 +421,10 @@
 																	>
 																</h2>
 																<oeb-checkbox
-																	class="tw-border-[var(--color-purple)]"
 																	name="{{ 'checkboxAiSkill_' + i }}"
 																	id="{{ 'checkboxAiSkill_' + i }}"
 																	[control]="aiCompetency.rawControlMap.selected"
-																	class="tw--mt-[0.25rem] tw-mb-[0.25rem]"
+																	class="tw-border-[var(--color-purple)] tw--mt-[0.25rem] tw-mb-[0.25rem]"
 																	[noMargin]="true"
 																></oeb-checkbox>
 															</div>
