--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -430,9 +430,12 @@
 	<p hlmP [size]="'sm'" class="oeb tw-font-semibold">
 		{{ 'Issuer.findLinkedInId' | translate }}
 	</p>
-	<p hlmP [size]="'sm'" class="oeb tw-italic tw-text-purple tw-pb-8">
-		{{ 'Issuer.findLinkedInIdText' | translate }}
-	</p>
+	<p
+		hlmP
+		[size]="'sm'"
+		[innerHTML]="'Issuer.findLinkedInIdText' | translate"
+		class="oeb tw-italic tw-text-purple tw-pb-8"
+	></p>
 	<div class="tw-flex tw-flex-row tw-pb-8 tw-gap-4">
 		<oeb-button
 			[size]="'sm'"
