--- a/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
+++ b/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
@@ -41,6 +41,7 @@
 	></oeb-input>
 
 	<oeb-input
+		class="oeb-input-hide-arrows"
 		label="{{ 'Issuer.linkedInId' | translate }}"
 		[sublabelRightTemplate]="linkedInIdSublabelRight"
 		[fieldType]="'number'"
@@ -141,6 +142,7 @@
 			name="verify-intent"
 			[text]="'Issuer.herebyIConfirm' | translate"
 			[control]="issuerForm.rawControlMap.verify_intended_use"
+			[multiLineText]="true"
 		>
 		</oeb-checkbox>
 	</div>
