--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -427,7 +427,7 @@
 	<p hlmP [size]="'sm'" class="oeb tw-pb-4">
 		{{ 'Issuer.linkedInUseNoteText' | translate }}
 	</p>
-	<p hlmP [size]="'sm'" class="oeb tw-font-semibold">
+	<p hlmP [size]="'sm'" class="oeb tw-font-semibold tw-pb-1">
 		{{ 'Issuer.findLinkedInId' | translate }}
 	</p>
 	<p
